# elwave-2d-cg

./: CMakeLists.txt  GLL_quadrature.cpp  GLL_quadrature.hpp  config.hpp.in  elastic_wave2D.cpp  elastic_wave2D.hpp  main.cpp  notes.txt  parameters.cpp  parameters.hpp  receivers.cpp  receivers.hpp  run_FEM_ALID.cpp  run_SEM_SRM.cpp  utilities.cpp  utilities.hpp
scripts/: make_layer.py
src/: elastic_wave2D.cpp  elastic_wave2D.hpp  parameters.cpp  parameters.hpp  run_FEM_ALID.cpp  run_SEM_SRM.cpp  source.cpp  source.hpp  utilities.cpp  utilities.hpp
